--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1,12 +1,13 @@
 /* Главный файл стилей - импортирует все остальные */
-/* 1. Переменные */
-@import './variables.css';
+
+/* 1. Переменные (должны быть первыми) */
+@import './variables.scss';
 
 /* 2. Сброс стилей */
-@import './reset.css';
+@import './reset.scss';
 
 /* 3. Утилитарные классы */
-@import './utilities.css';
+@import './utilities.scss';
 
 /* 4. Ваши глобальные стили приложения */
 /* Добавьте сюда свои стили, если нужно */
