testing: add layout

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1,10 +1,13 @@
 /* Главный файл стилей - импортирует все остальные */
 
-/* 1. Переменные */
+/* 1. Миксины и функции (должны быть первыми) */
+@import './mixins.scss';
+
+/* 2. Переменные */
 @import './variables.scss';
 
-/* 2. Сброс стилей */
+/* 3. Сброс стилей */
 @import './reset.scss';
 
-/* 3. Ваши глобальные стили приложения */
+/* 4. Ваши глобальные стили приложения */
 /* Добавьте сюда свои стили, если нужно */
