--- a/app/assets/css/reset.scss
+++ b/app/assets/css/reset.scss
@@ -11,11 +11,20 @@ html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+  height: 100%;
+}
+
+body {
+  height: 100%;
 }
 
 body {
   font-family: var(--font-family-primary);
   font-size: var(--font-size-base);
+  font-weight: var(--font-weight-normal);
+  line-height: 1.5;
+  color: var(--color-text-primary);
+  background-color: var(--color-bg-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
