TASK-2: add verify and header and question icon, fix form, tooltip, link, button

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1,12 +1,5 @@
-/* Главный файл стилей - импортирует все остальные */
-
-/* 1. Миксины и функции (должны быть первыми) */
-@import './mixins.scss';
-
-/* 2. Переменные */
+@use './mixins.scss' as *;
 @import './variables.scss';
-
-/* 3. Сброс стилей */
 @import './reset.scss';
 
 /* 4. Ваши глобальные стили приложения */
