--- a/app/components/UI/ButtonUi/ButtonUi.scss
+++ b/app/components/UI/ButtonUi/ButtonUi.scss
@@ -72,7 +72,7 @@
   color: white;
 
   &:hover:not(.btn--disabled) {
-    background-color: #2563eb;
+    background-color: var(--color-primary-hover);
   }
 }
 
@@ -102,7 +102,7 @@
   color: white;
 
   &:hover:not(.btn--disabled) {
-    background-color: #2563eb;
+    background-color: var(--color-primary-hover);
   }
 }
 
@@ -141,7 +141,7 @@
   color: white;
 
   &:hover:not(.btn--disabled) {
-    background-color: #0891b2;
+    background-color: var(--color-info-hover);
   }
 }
 
@@ -150,7 +150,7 @@
   color: white;
 
   &:hover:not(.btn--disabled) {
-    background-color: #059669;
+    background-color: var(--color-success-hover);
   }
 }
 
@@ -159,7 +159,7 @@
   color: white;
 
   &:hover:not(.btn--disabled) {
-    background-color: #d97706;
+    background-color: var(--color-warning-hover);
   }
 }
 
@@ -168,7 +168,7 @@
   color: white;
 
   &:hover:not(.btn--disabled) {
-    background-color: #dc2626;
+    background-color: var(--color-danger-hover);
   }
 }
 
@@ -179,7 +179,7 @@
   box-shadow: var(--shadow-md);
 
   &:hover:not(.btn--disabled) {
-    background-color: #2563eb;
+    background-color: var(--color-primary-hover);
     box-shadow: var(--shadow-lg);
   }
 }
