--- a/app/assets/css/reset.scss
+++ b/app/assets/css/reset.scss
@@ -12,13 +12,11 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
   height: 100%;
+  background-color: var(--color-bg-primary);
 }
 
 body {
   height: 100%;
-}
-
-body {
   font-family: var(--font-family-primary);
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-normal);
